<resources>
    <string name="app_name">SG_Ap1</string>
    <string name="action_settings">Settings</string>
    <string name="hint_nama">Namamu</string>
    <string name="hint_umur">Umurmu</string>
    <string name="text_btn_process">Process</string>
    <string name="text_nama">NAMA</string>
    <string name="text_gender">Gender</string>
    <string name="text_umur">Umur</string>

    <string-array name="array_gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>
