<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/fab_margin"
    android:layout_marginStart="@dimen/fab_margin"
    android:layout_marginEnd="@dimen/fab_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin">

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_gender"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/tv_umur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_umur"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>