<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama" />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_umur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:hint="@string/hint_umur"
        android:inputType="numberDecimal"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_nama" />

    <LinearLayout
        android:id="@+id/ll_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_umur">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_gender"
            android:minHeight="32dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorPrimary"
        android:text="@string/text_btn_process"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/ll_spinner" />

</android.support.constraint.ConstraintLayout>